CHANGES
=======

* Refactor: Split manager into TunnelManager and SystemProcessManager, surround code with try { } catch { }
* Updated docs
* Refactor of naming + docs
* Refactor of retry mechanism - used loop instead of recursion. The recursion was a very bad idea as it was causing the stack overflow at longer runs
* Stabilization of the SSH reconnection in all conditions
* Implemented maximum retries, refactored str representation
* Fixed support of forwarding to remote, handled gateway ports, added more automation of IP address
* Fixed mode name to fit the documentation
* Covered partially tunnel loop restart policy
* Move logic from manager to model
* Added travis badge
* Fixed package name in ARM build
* Added badges, updated docs structure
* CI: Switch to Ubuntu 18.04 on Travis
* CI: Added pipeline for Python 3.6 and Python 3.7
* CI: Tox will now run tests on Python 3.6
* Covered create\_ssh\_keyscan\_command()
* Initial unit tests
* Added pynacl from package manager, as it compiles too long
* Added pynacl from package manager, as it compiles too long
* Trigger README rebuild
* Updated docs
* Added ARM support to the Travis build
* Dockerfile and CI setup for 3.0.0 release
* Fixed launching problems as a package and not as a package
* Added Slack integration
* Clean up
* Corrected docs
* Corrected docs
* Added example configurations
* Improved error handling for the validation commands
* Added health check endpoint and a secret prefix, tornado logging in "dev" environment
* Disabled Tornado logger
* Clean up #1
* Implemented shell tools: send-public-key, add-to-known-hosts
* Fix restarts counter
* Added web view, Pipfile
* Rewrite to Python as part of 3.0.0 release

v2.1.0
------

* Migration to Travis and Quay.io

v2.0.0
------

* Added docker usage
* Added support for read-only ssh keys as volume
* Switched ARM build to Debian
* Added ARM build
* Added more documentation